# ClayEngineVK

./: .gitmodules  CMakeLists.txt  README.md
demo/src/: main.cpp
include/clay/application/: App.h  InputHandler.h  Scene.h
include/clay/application/android/: AppAndroid.h
include/clay/application/common/: BaseApp.h  BaseScene.h  IApp.h  Resources.h
include/clay/application/desktop/: AppDesktop.h  InputHandlerDesktop.h
include/clay/application/xr/: AppXR.h  CameraControllerXR.h  InputHandlerXR.h  XRSystem.h
include/clay/audio/: Audio.h  AudioManager.h  SoundDevice.h  SoundSource.h
include/clay/ecs/: EntityManager.h  Types.h
include/clay/ecs/components/: TextRenderable.h
include/clay/ecs/systems/: RenderSystem.h
include/clay/entity/: Entity.h
include/clay/entity/render/: BaseRenderable.h  ModelRenderable.h  SpriteRenderable.h  TextRenderable.h
include/clay/graphics/: Material.h  Model.h
include/clay/graphics/android/: GraphicsContextAndroid.h
include/clay/graphics/common/: BaseGraphicsContext.h  Camera.h  Font.h  IGraphicsContext.h  Material.h  Mesh.h  Model.h  PipelineResource.h  ShaderModule.h  SkyBox.h  Texture.h  UniformBuffer.h
include/clay/graphics/desktop/: GraphicsContextDesktop.h
include/clay/graphics/xr/: GraphicsContextXR.h
include/clay/gui/: Window.h
include/clay/gui/android/: ImGuiComponentAndroid.h
include/clay/gui/desktop/: ImGuiComponentDesktop.h  Window.h
include/clay/gui/xr/: ImGuiComponentXR.h
include/clay/utils/: Utils.h
include/clay/utils/common/: Logger.h  Utils.h
include/clay/utils/desktop/: UtilsDesktop.h
include/clay/utils/xr/: UtilsXR.h
src/clay/application/: App.cpp  InputHandler.cpp  Scene.cpp
src/clay/application/android/: AppAndroid.cpp
src/clay/application/common/: BaseApp.cpp  BaseScene.cpp  Resources.cpp
src/clay/application/desktop/: AppDesktop.cpp  InputHandlerDesktop.cpp
src/clay/application/xr/: AppXR.cpp  CameraControllerXR.cpp  InputHandlerXR.cpp  XRSystem.cpp
src/clay/audio/: Audio.cpp  AudioManager.cpp  SoundDevice.cpp  SoundSource.cpp
src/clay/ecs/: EntityManager.cpp  TextRenderable.cpp
src/clay/ecs/components/: TextRenderable.cpp
src/clay/ecs/systems/: RenderSystem.cpp
src/clay/entity/: Entity.cpp
src/clay/entity/render/: BaseRenderable.cpp  ModelRenderable.cpp  SpriteRenderable.cpp  TextRenderable.cpp
src/clay/graphics/: Camera.cpp  Material.cpp  Mesh.cpp  Model.cpp
src/clay/graphics/android/: GraphicsContextAndroid.cpp
src/clay/graphics/common/: BaseGraphicsContext.cpp  Camera.cpp  Font.cpp  IGraphicsContext.cpp  Material.cpp  Mesh.cpp  Model.cpp  PipelineResource.cpp  ShaderModule.cpp  SkyBox.cpp  Texture.cpp  UniformBuffer.cpp
src/clay/graphics/desktop/: GraphicsContextDesktop.cpp
src/clay/graphics/xr/: GraphicsContextXR.cpp
src/clay/gui/: Window.cpp
src/clay/gui/android/: ImGuiComponentAndroid.cpp
src/clay/gui/desktop/: ImGuiComponentDesktop.cpp  Window.cpp
src/clay/gui/xr/: ImGuiComponentXR.cpp
src/clay/utils/: Utils.cpp
src/clay/utils/common/: Utils.cpp
src/clay/utils/desktop/: UtilsDesktop.cpp
src/clay/utils/xr/: UtilsXR.cpp
